--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Git</title>
 </head>
 <body>
-    <p>hola estoy aprendiendo mas de git, con todas las ganas :D</p>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Titulo del post</h1>
+            <p>parrafo de inicio</p>
+        </div>
+    </div>
 </body>
 </html>
