--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container">
+        <div id=" cabecera"></div>
         <div id="post">
             <h1>Titulo del post</h1>
             <p>parrafo de inicio</p>
